# advent_of_code

./: Cargo.toml
cpp/: .gitignore  flake.nix
cpp/day_8/: CMakeLists.txt  day_8.cpp
day1/: Cargo.toml
day1/src/: main.rs
day2/src/: main.rs
day3/src/: main.rs
day4/src/: main.rs
day5/src/: main.rs
day6/src/: main.rs
day7/src/: day7.py  main.rs
